@@ -5,6 +5,7 @@
 === 1.0.16 ===
 * Implemented lltl::ptrset collection for unordered pointer storage.
 * Implemented raw_parray::qpremove method.
+* Implemented raw_darray::qremove and raw_darray::qpremove methods.
 * Updated build scripts.
 
 === 1.0.15 ===
